css/app.css
html {
        height: 100vh;
        min-height: 100%;
}

body {
        font-family: 'Open Sans', sans-serif;
        position: relative;
}

h1 {
  font-size: 50px;
  font-family: 'Scope One', serif;
}

p {
    color: #666666;
}

#logo {
    width: 300px;

}

.navbar {
        margin-bottom: 0px;
        padding: 30px 15px;
        opacity: 0.9;
        -webkit-transition: all 0.2s ease;
        transition: all 0.2s ease;

}

.navbar-default .active  a {
    background-color: #466768 !important;
    color: white !important;
}


@media (max-width: 420px) {

        .navbar-header {
                position: relative;
        }

        .navbar img {
                position: absolute;
                top: 0;
                bottom: 0;
                margin: auto;
                width: 70%;
        }


}

.fill-screen {
        background-size: cover;
        background-position: center;

}


@media only screen and (min-width : 1367px) and (max-width: 2047px) {.fixed-attachment {background-attachment: fixed;}}
@media only screen and (min-device-width : 568px) and (max-device-width : 1366px) and (-webkit-min-device-pixel-ratio: 2) {}



.title-row {
        position: relative;
        min-height: 300px;
}


.down-button {
        position: absolute;
        padding: 20px;
        top: 80%;
        left: 50%;
        margin-right: -50%;
        transform: translate(-50%, -50%);
        -webkit-transform: translate(-50%, -50%);
}

.title-image {
    position: absolute;
    font-family: 'IM Fell DW Pica', serif;
    font-weight: bold;
    color: #466768;
    z-index: 1;
    border-radius: 25px;
    padding: 20px;
    top: 60%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
}

.title-image-cont {
    position: absolute;
    font-family: 'IM Fell DW Pica', serif;
    font-weight: bold;
    color: #466768;
    background-color: white;
    border-radius: 25px;
    padding: 55px 20px 5px 20px;
    top: 62%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
}

.down-button i {
        color: white;
}


.text-banner {

        margin: 40px 20px;
}

#descript {
  text-align: center;
}

#smoking {
  text-align: center;
  margin-top: 30px;
}


.accomodations {
  display: table;
  margin: 0 auto;
  text-align: center;
}

.text-banner h1 {
        font-size: 44px;
}

.text-banner p {
        font-size: 18px;
}

#activityTitle {
  position: relative;
  top: -30px;
  text-align: center;
  margin: 10px;
  font-size: 50px;
}

.activity-section {
      margin: 80px 30px 30px 30px;
}
.activity-element {
        text-align: center;
        margin-top: 30px;
}

.activity-element img {
        width: 300px;
        height: 300px;
        border-radius: 180px;
}

.rates {
    text-align: center;
}

.deposit {
    font-weight: bold;
}

.contact-us {
        margin: 50px;
        text-align: center;
}

#contact-me {
    margin-top: 200px;
}

.form {

    margin-bottom: 30px;
    margin-top: -10px;

}


@media (max-width: 740px  ) {

    .required {
        margin-top: -60px;
        margin-right: 20px;

    }
}

.reserveMe {
    margin-top: 200px;
}

#guestBook {
        margin: 50px;
        margin-top: 200px;
        text-align: center;
}

#name {
    text-transform: capitalize;
}

#formAlerts {
    margin-bottom: 40px;
}

.bookImg {
    width: 150px;
    margin: 0 auto;
    margin-top: 30px;
}


#vid {
        display: block;
        position: relative;
        min-height: 100%;
        min-width: 100%;
        width: auto;
        height: auto;
        padding: 10px 0;
        background: no-repeat center center;
        background-attachment: scroll;
        background-size: cover;

}


.cbp-af-header-shrink {
        padding-top: 5px;
        padding-bottom: 5px;
}

.navbar-inverse .navbar-nav>li>a {
        color: #bbb;
}

#gallery {
    margin: 50px 0 20px 0;

}

.pano {
    text-align: center;
    display: block;
    margin: 30px auto;
}

.aList {
  font-weight: bold;
}

#beachIcon {
  width: 200px;
}


footer {
        background-color: #333;
        color: #ddd;
        padding: 20px;
        margin-top: 100px;
        text-align: center;
}

aside {
        background-color: #f7f7f7;
        text-align: center;
        padding-top: 40px;

}

.range-list {
        padding-bottom: 40px;
        padding-top: 40px;
}

.range-list h4 {
        margin-bottom: 40px;
        color: darkorange;
        font-weight: bold;

}

.range-list img {
        width: 100%;
        height: 100%;
        max-width: 140px;
        max-height: 60px;
}

.range-title {
        color: darkblue;
}


article {
        padding: 40px;
}

article img {
        width: 100%;
        height: 100%;
        text-align: center;
        box-shadow: 6px 6px 8px #777;
        margin-bottom: 20px;
}

article p {
        font-size: 16px;
}

